--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,8 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.6", features = ["ws"] }
-base64 = "0.21"
 futures-util = "0.3"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
-serde = { version = "1", features = ["derive"] }
-serde_urlencoded = "0.7"
+serde_json = "1.0.103"
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }
