Add CLI and memory usage (#2)
* Add CLI and memory usage

* remove json depend and static index.json file

* Replace main.rs with bin/ocasta-bare.rs

* Prepend Directory to Routes as well.

* a single space (makes it look prettier)

---------

Co-authored-by: GavBog <me@gbogie.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+argh = "0.1"
 axum = { version = "0.6", features = ["ws"] }
 futures-util = "0.3"
+memory-stats = "1"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
