--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ license = "GPL-3.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1"
 argh = "0.1"
-axum = { version = "0.6", features = ["ws"] }
+axum = { version = "=0.6", features = ["ws"] }
 futures-util = "0.3"
 memory-stats = "1"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
-tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
+tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
